# uc

./: CMakeLists.txt  CONTRIBUTING.md  Readme.md  a.out  calculator.c  conv_str_to_math_res.c  conv_str_to_math_res.h  exponent_mode.c  exponent_mode.h  handle_arguments.c  handle_arguments.h  number_formatter.c  number_formatter.h  old.c  power_uc.c  power_uc.h  uc.c
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
tests/: test_uc.c
